Use UI locale in contribute mode for tasks and wokrflow forms. Use UI locale for "add content" labels and also sort them alphabetically.

--- a/src/main/webapp/resources/JahiaTasks_de.properties
+++ b/src/main/webapp/resources/JahiaTasks_de.properties
@@ -1,27 +1,34 @@
-jnt_task                    = Aufgabe
-jnt_task.assignee           = Verantwortliche
-jnt_task.cancel             = Stornieren
-jnt_task.canceled           = Storniert
-jnt_task.complete           = Beenden
-jnt_task.continue           = Fortsetzen
-jnt_task.createTask         = Aufgabe erstellen
-jnt_task.description        = Beschreibung
-jnt_task.dueDate            = Zu erledigen bis
-jnt_task.myTasks            = Meine Aufgaben
-jnt_task.newTask            = Neue Aufgabe
-jnt_task.priority           = Priorität
-jnt_task.priority.high      = Hoch
-jnt_task.priority.low       = Niedrig
-jnt_task.priority.medium    = Mittel
-jnt_task.priority.very_high = Sehr hoch
-jnt_task.priority.very_low  = Sehr niedrig
-jnt_task.state              = Status
-jnt_task.state.active       = Aktiv
-jnt_task.state.finished     = Erledigt
-jnt_task.state.suspended    = Angehalten
-jnt_task.suspended          = Angehalten
-jnt_task.title              = Titel
-jnt_task.type               = Typ
-jnt_tasks                   = Aufgabe erstellen (Formular)
-jnt_userTask.next           = Entsprechend
-jnt_userTask.previous       = Präzedenzfall
+jnt_currentUserTasks=Meine Aufgaben
+jnt_currentUserTasks.viewUserTasks=Benutzer-Aufgaben anzeigen
+jnt_currentUserTasks.viewWorkflowTasks=Workflow-Aufgaben anzeigen
+jnt_task=Aufgabe
+jnt_task.assignee=Verantwortliche
+jnt_task.cancel=Stornieren
+jnt_task.canceled=Storniert
+jnt_task.comments=Kommentare
+jnt_task.comments.add=Kommentar hinzufügen
+jnt_task.complete=Beenden
+jnt_task.continue=Fortsetzen
+jnt_task.createTask=Aufgabe erstellen
+jnt_task.description=Beschreibung
+jnt_task.dueDate=Zu erledigen bis
+jnt_task.myTasks=Meine Aufgaben
+jnt_task.newTask=Neue Aufgabe
+jnt_task.priority=Priorität
+jnt_task.priority.high=Hoch
+jnt_task.priority.low=Niedrig
+jnt_task.priority.medium=Mittel
+jnt_task.priority.very_high=Sehr hoch
+jnt_task.priority.very_low=Sehr niedrig
+jnt_task.state=Status
+jnt_task.state.active=Aktiv
+jnt_task.state.finished=Erledigt
+jnt_task.state.suspended=Angehalten
+jnt_task.suspended=Angehalten
+jnt_task.title=Titel
+jnt_task.type=Typ
+jnt_tasks=Aufgabe erstellen (Formular)
+jnt_userTask.next=Entsprechend
+jnt_userTask.previous=Präzedenzfall
+label.actions=Aktionen
+label.startDate=Startdatum
