fixed task components from docspace sources ( QA-2917 QA-3261 QA-2955  )

--- a/src/main/webapp/resources/JahiaTasks_de.properties
+++ b/src/main/webapp/resources/JahiaTasks_de.properties
@@ -27,7 +27,7 @@ jnt_task.state.suspended=Angehalten
 jnt_task.suspended=Angehalten
 jnt_task.title=Titel
 jnt_task.type=Typ
-jnt_tasks=Aufgabe erstellen (Formular)
+jnt_createTaskForm=Aufgabe erstellen (Formular)
 jnt_userTask.next=Entsprechend
 jnt_userTask.previous=Präzedenzfall
 label.actions=Aktionen
