--- a/src/main/webapp/resources/JahiaTasks_fr.properties
+++ b/src/main/webapp/resources/JahiaTasks_fr.properties
@@ -1,30 +1,30 @@
-jnt_task                    = Task
-jnt_task.assignee           = Responsable
-jnt_task.cancel             = Annuler
-jnt_task.canceled           = Annulé
-jnt_task.complete           = Terminer
-jnt_task.continue           = Continuer
-jnt_task.createTask         = Créer une tâche
-jnt_task.description        = Description
-jnt_task.dueDate            = Pour le
-jnt_task.myTasks            = Mes tâches
-jnt_task.newTask            = Nouvelle tache
-jnt_task.priority           = Priorité
-jnt_task.priority.high      = Haute
-jnt_task.priority.low       = Basse
-jnt_task.priority.medium    = Moyenne
-jnt_task.priority.very_high = Très haute
-jnt_task.priority.very_low  = Très basse
-jnt_task.state              = Etat
-jnt_task.state.active       = En cours
-jnt_task.state.finished     = Finie
-jnt_task.state.suspended    = En attente
-jnt_task.suspended          = Suspendue
-jnt_task.title              = Titre
-jnt_task.type               = Type
-jnt_tasks                   = Formulaire d'ajout de tâches
-jnt_userTask.next           = Suivant
-jnt_userTask.previous       = Précédent
+jnt_task=Task
+jnt_task.assignee=Responsable
+jnt_task.cancel=Annuler
+jnt_task.canceled=Annulé
+jnt_task.complete=Terminer
+jnt_task.continue=Continuer
+jnt_task.createTask=Créer une tâche
+jnt_task.description=Description
+jnt_task.dueDate=Pour le
+jnt_task.myTasks=Mes tâches
+jnt_task.newTask=Nouvelle tache
+jnt_task.priority=Priorité
+jnt_task.priority.high=Haute
+jnt_task.priority.low=Basse
+jnt_task.priority.medium=Moyenne
+jnt_task.priority.very_high=Très haute
+jnt_task.priority.very_low=Très basse
+jnt_task.state=Etat
+jnt_task.state.active=En cours
+jnt_task.state.finished=Finie
+jnt_task.state.suspended=En attente
+jnt_task.suspended=Suspendue
+jnt_task.title=Titre
+jnt_task.type=Type
+jnt_createTaskForm=Formulaire d'ajout de tâches
+jnt_userTask.next=Suivant
+jnt_userTask.previous=Précédent
 jnt_task.comments=commentaires
 jnt_task.comments.add=Ajouter un commentaire
 jnt_currentUserTasks=Mes tâches
