Consistency, typos/spelling, French translations RB update (1)

--- a/src/main/resources/resources/JahiaTasks_fr.properties
+++ b/src/main/resources/resources/JahiaTasks_fr.properties
@@ -41,7 +41,7 @@ label.actions.start=Démarrer
 label.actions.suspend=Suspendre
 label.createdBy=Créé par
 label.createdOn=le
-label.showTask=Montrer la tâche
+label.showTask=Voir la tâche
 label.startDate=Début
 label.upcoming=A venir
 label.upcoming.no.tasks=Pas de tâche à venir.
