QA-5858 update RB

--- a/src/main/resources/resources/JahiaTasks_en.properties
+++ b/src/main/resources/resources/JahiaTasks_en.properties
@@ -69,3 +69,4 @@ label.showTask=Show task
 label.startDate=Start date
 label.upcoming=Upcoming
 label.upcoming.no.tasks=No upcoming tasks.
+label.actions.unassign=Unassign
