--- a/src/main/resources/resources/JahiaTasks_de.properties
+++ b/src/main/resources/resources/JahiaTasks_de.properties
@@ -44,3 +44,4 @@ label.createdOn=am
 label.showTask=Aufgabe anzeigen
 label.startDate=Startdatum
 label.upcoming=Anstehende
+label.actions.unassign=Zuweisung aufheben
