--- a/src/main/resources/resources/JahiaTasks_fr.properties
+++ b/src/main/resources/resources/JahiaTasks_fr.properties
@@ -45,3 +45,4 @@ label.showTask=Voir la tâche
 label.startDate=Début
 label.upcoming=A venir
 label.upcoming.no.tasks=Pas de tâche à venir.
+label.actions.unassign=Désassigner
