DOCSPACE-515: Tasks have now only 3 priorities

--- a/src/main/resources/resources/JahiaTasks_de.properties
+++ b/src/main/resources/resources/JahiaTasks_de.properties
@@ -19,9 +19,7 @@ jnt_task.newTask=Neue Aufgabe
 jnt_task.priority=Priorität
 jnt_task.priority.high=Hoch
 jnt_task.priority.low=Niedrig
-jnt_task.priority.medium=Mittel
-jnt_task.priority.very_high=Sehr hoch
-jnt_task.priority.very_low=Sehr niedrig
+jnt_task.priority.normal=Normal
 jnt_task.state=Status
 jnt_task.state.active=Aktiv
 jnt_task.state.finished=Erledigt
