--- a/src/main/resources/resources/JahiaTasks_fr.properties
+++ b/src/main/resources/resources/JahiaTasks_fr.properties
@@ -15,9 +15,7 @@ jnt_task.newTask=Nouvelle tâche
 jnt_task.priority=Priorité
 jnt_task.priority.high=Haute
 jnt_task.priority.low=Basse
-jnt_task.priority.medium=Moyenne
-jnt_task.priority.very_high=Très haute
-jnt_task.priority.very_low=Très basse
+jnt_task.priority.normal=Normale
 jnt_task.state=Etat
 jnt_task.state.active=En cours
 jnt_task.state.finished=Terminé
